@@ -39,6 +39,7 @@ ts::TSP::TSP(int max_severity) :
     Report(max_severity),
     _use_realtime(false),
     _tsp_bitrate(0),
+    _tsp_timeout(Infinite),
     _tsp_aborting(false),
     _total_packets(0),
     _plugin_packets(0)
@@ -124,6 +125,11 @@ ts::BitRate ts::Plugin::getBitrate()
 }
 
 bool ts::Plugin::isRealTime()
+{
+    return false;
+}
+
+bool ts::Plugin::handlePacketTimeout()
 {
     return false;
 }
